actual about page

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,5 @@
 # About
 
-This is the about page! This page is shown on the navbar.
+Statistical is a Discord bot for tracking your favorite YouTuber's subscriber counts, viewing statistics about a server and it's users, and more.
+
+We have been perfecting our bot since the start of 2023, and are still working with your favorite statistics creators to keep improving the bot and adding more features.
