add actual decent docs, update about

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,5 +1,9 @@
-# About
+# About Statistical
 
-Statistical is a Discord bot for tracking your favorite YouTuber's subscriber counts, viewing statistics about a server and it's users, and more.
+The idea of Statistical was originally inspired from LCXYZ Stats Bot, made by [@mixaxern on YouTube](https://youtube.com/@mixaxern). The bot was shut down during early February, and it left every single server.
 
-We have been perfecting our bot since the start of 2023, and are still working with your favorite statistics creators to keep improving the bot and adding more features.
+[ToastedToast](https://github.com/ToastedDev) decided he wanted to make his own version. Thanks to the community, the bot has grown tremendously over the past few months.
+
+## Team
+
+Currently, the development team only consists of [ToastedToast](https://github.com/ToastedDev), but the community gives us a helping hand by giving us ideas and reporting bugs.
