--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -1,11 +1,9 @@
 # Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
 
-## What is Nextra?
+Welcome to the official Statistical documentation! If you need help, you can go to here to learn about every feature in Statistical.
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+## What is Statistical?
 
-## Documentation
+Statistical is a Discord bot for tracking your favorite YouTuber's subscriber counts, viewing statistics about a server and it's users, and more.
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+It is currently the best option for tracking YouTube channels and getting a Discord message whenever they have an API update.
