add credits to about page

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -7,3 +7,8 @@ The idea of Statistical was originally inspired from LCXYZ Stats Bot, made by [@
 ## Team
 
 Currently, the development team only consists of [ToastedToast](https://github.com/ToastedDev), but the community gives us a helping hand by giving us ideas and reporting bugs.
+
+## Credits
+
+- [MixAxern](https://youtube.com/@MixAxern): Inspiring the idea for this bot.
+- [Statsable](https://youtube.com/@Statsable): Helping us with finding bugs and the subscribers/day calculations.
