add actual tracking docs

--- a/pages/docs/tracking.mdx
+++ b/pages/docs/tracking.mdx
@@ -1,7 +1,14 @@
-import { Callout } from "nextra-theme-docs";
-
 # Tracking a channel
 
-<Callout type="warning" emoji="⚠️">
-  This page is a stub. Help us expand it by contributing!
-</Callout>
+To track a channel, you can use the `/watch` command.
+
+You can select a channel by either typing it's name and selecting it among the options, copy-pasting their channel ID, or using their handle.
+
+You should see a message like this:
+![Successful Track Example](/docs/successful_track.png)
+
+This confirms that you have successfully tracked that channel. Congratulations!
+
+## Any problems?
+
+If you don't see a message like that, make sure to check `/watching` to see if it is on the list. If it doesn't, make sure to contact us on [Discord](/discord).
