fixed server statistic docs problem (finally) (I hope)

--- a/pages/docs/server-statistics.mdx
+++ b/pages/docs/server-statistics.mdx
@@ -1,4 +1,4 @@
-# Server-related Statistics
+# Server Statistics
 
 Once you invite Statistical, the bot will start tracking your server's messages and reactions. If you want to opt-out, you can read [this page](/docs/server-related-stats/opt-out).
 
