--- a/pages/docs/server-related-stats.mdx
+++ b/pages/docs/server-related-stats.mdx
@@ -1,6 +1,6 @@
 # Server-related statistics
 
-Once you invite Statistical, the bot will start tracking your server's messages and reactions. If you want to opt-out, you can read [this page](/docs/server-related-stats/opt-out).
+Once you invite Statistical, the bot will start tracking your server's messages and reactions.
 
 ## Statistics the bot tracks
 
