rename "About Statistical" title to "About"

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,4 +1,4 @@
-# About Statistical
+# About
 
 The idea of Statistical was originally inspired from LCXYZ Stats Bot, made by [@mixaxern on YouTube](https://youtube.com/@mixaxern). The bot was shut down during early February, and it left every single server.
 
