update server stats page

--- a/pages/docs/server-related-stats/server.mdx
+++ b/pages/docs/server-related-stats/server.mdx
@@ -1,6 +1,6 @@
 # Server statistics
 
-If you want to view a user's statistics, you can use the `/stats server` command.
+If you want to view a server's statistics, you can use the `/stats server` command.
 
 You should see a message like this:
 ![Server Statistics Example](/docs/server-related-stats/server_example.png)
