add callout in leaderboards docs

--- a/pages/docs/server-related-stats/leaderboards.mdx
+++ b/pages/docs/server-related-stats/leaderboards.mdx
@@ -4,6 +4,13 @@ We have leaderboards for both global and server statistics.
 
 To view a leaderboard, you can run `/leaderboard [group] [category]`. An example is `/leaderboard global characers`.
 
+import { Callout } from "nextra-theme-docs";
+
+<Callout type="info" emoji="ℹ️">
+  Don't know what groups are or what categories exist? Make sure to read [this
+  page first](/docs/server-related-stats)! We detail it a lot more over there.
+</Callout>
+
 You should see a message like this:
 ![Leaderboard Example](/docs/server-related-stats/leaderboard_example.png)
 
