update beginning of privacy policy

--- a/pages/privacy.mdx
+++ b/pages/privacy.mdx
@@ -1,6 +1,6 @@
 # Privacy Policy
 
-This Privacy Policy explains how we at Statistical Labs collect, use, store, and share your personal information. Use of Statistical is considered an agreement to the terms of this Policy.
+This Privacy Policy explains how we at Statistical Labs collect, use, store, and share your information. Use of Statistical and it's services is considered an agreement to the terms in this Policy.
 
 ## What data does Statistical store?
 
