--- a/pages/terms.mdx
+++ b/pages/terms.mdx
@@ -28,7 +28,7 @@ You agree to indemnify and hold us harmless from any and all claims, damages, lo
 
 ## Governing Law
 
-These Terms shall be governed by and construed in accordance with the laws of the jurisdiction in which we operate.
+These Terms of Service shall be governed by and construed in accordance with the laws of the jurisdiction in which we operate.
 
 ## Changes to the Terms of Service
 
