update graphs docs

--- a/pages/docs/graphs.mdx
+++ b/pages/docs/graphs.mdx
@@ -1,6 +1,8 @@
 # Graphs
 
-If you want to view a graph of someone's growth since they have been tracked (or since 04/19/2023 for older channels), you can click the `View growth graph` button on their subscriber updates.
+If you want to view a graph of someone's growth since they have been tracked (or since 04/19/2023 for older channels), you can click the `View growth graphs` button on their subscriber updates.
 
-It should show an image like this:
+You can select either the subscriber graph or the subscribers/day graph.
+
+One selecting a type, it should show an image like this:
 ![Graph Example](/docs/graph_example.png)
