add opting out in server-related stats docs

--- a/pages/docs/server-related-stats.mdx
+++ b/pages/docs/server-related-stats.mdx
@@ -2,6 +2,10 @@
 
 Once you invite Statistical, the bot will start tracking your server's messages and reactions.
 
+## Opting out
+
+If you don't want Statistical to track your server's messages and reactions, run `/optout` and it won't track your server.
+
 ## Statistics the bot tracks
 
 - Messages: The amount of messages sent.
