update about page

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,14 +1,17 @@
 # About
 
-The idea of Statistical was originally inspired from LCXYZ Stats Bot, made by [@mixaxern on YouTube](https://youtube.com/@mixaxern). The bot was shut down during early February, and it left every single server.
+The idea of Statistical was originally inspired from LCXYZ Stats Bot, made by [NiaAxern](https://youtube.com/@mixaxern). The bot was shut down during early February, and it left every single server.
 
 [ToastedToast](https://github.com/ToastedDev) decided he wanted to make his own version. Thanks to the community, the bot has grown tremendously over the past few months.
 
 ## Team
 
-Currently, the development team only consists of [ToastedToast](https://github.com/ToastedDev), but the community gives us a helping hand by giving us ideas and reporting bugs.
+Our team is currently pretty small, but soon we'll open up applications so you can help! You can also [contribute to the Statistical repository on GitHub](https://github.com/StatisticalLabs/bot).
+
+- [ToastedToast](https://github.com/ToastedDev): Main developer
+- [Cadzilla](https://youtube.com/@cadzilla): Bug hunter
 
 ## Credits
 
-- [MixAxern](https://youtube.com/@MixAxern): Inspiring the idea for this bot.
+- [NiaAxern](https://youtube.com/@mixaxern): Inspiring the idea for this bot.
 - [Statsable](https://youtube.com/@Statsable): Helping us with finding bugs and the subscribers/day calculations.
